still not working
re-arranged some files and got rid of some errors.

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,6 @@ Temporary Items
 /DigitalPictureFrame/nbproject/private/
 /DigitalPictureFrame/build/
 /DigitalPictureFrame/dist/
+/PictureFrame/build/
+/PictureFrame/dist/
+/PictureFrame/nbproject/private/
