--- a/PictureFrame/nbproject/project.properties
+++ b/PictureFrame/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=DigitalPictureFrame
+application.title=PictureFrame
 application.vendor=Zachary Murphy
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -25,11 +26,10 @@ debug.test.classpath=\
     ${run.test.classpath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/DigitalPictureFrame.jar
+dist.jar=${dist.dir}/PictureFrame.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.Java-jre1.8.0_73=../../../../../../Program Files/Java/jre1.8.0_73
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -39,7 +39,6 @@ javac.classpath=\
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
-javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -79,7 +78,7 @@ javafx.enable.concurrent.external.runs=false
 javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
 # Main class for JavaFX
-javafx.main.class=digitalpictureframe.DigitalPictureFrame
+javafx.main.class=pictureframe.PictureFrame
 javafx.preloader.class=
 # This project does not use Preloader
 javafx.preloader.enabled=false
@@ -101,7 +100,6 @@ manifest.custom.codebase=*
 manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${dist.jar}:\
@@ -112,5 +110,4 @@ run.test.classpath=\
     ${build.test.classes.dir}
 source.encoding=UTF-8
 src.dir=src
-src.jre1.8.0_73.dir=${file.reference.Java-jre1.8.0_73}
 test.src.dir=test
